Update to looks aka assigment week 2 done

--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width,initial-scale=1.0">
+        <meta name="description" content="Volodymyr Druchok, WDD130, The authors home page for the wdd130 course">
+        <meta name="author" content="Volodymyr Druchok">
         <title>Volodymyr Druchok | WDD 130</title>
         <link rel="stylesheet" href="styles/styles.css">
     </head>
@@ -15,11 +17,16 @@
         </header>
         <main>
             <h1>Volodymyr Druchok | WDD 130</h1>
-            <img src="images/profile.webp" alt="Volodymyr Druchok" width="200" />
+            <img src="images/profile.webp" alt="Volodymyr Druchok" width="200">
             <p>My name is Volodymyr Druchok, but it's fine if you just call me David. I currently live in Calgary, Canada, although I am originally from Ukraine. My very short and boring list of hobbies includes playing the bass guitar, bodybuilding, and reading copious amounts of history and anthropology books. </p>
         </main>
+        <aside>
+            <h2>Alberta, Canada</h2>
+            <img src="images/alberta.webp" alt="Alberta landscape">
+            <p>Alberta is one of the 13 provinces and territories of Canada. It is a part of Western Canada and is one of the three prairie provinces. Alberta borders British Columbia to the west, Saskatchewan to the east, the Northwest Territories to the north, and the U.S. state of Montana to the south. It is one of the only two landlocked provinces in Canada, with Saskatchewan being the other.[8] The eastern part of the province is occupied by the Great Plains, while the western part borders the Rocky Mountains. The province has a predominantly continental climate but experiences quick temperature changes due to air aridity. Seasonal temperature swings are less pronounced in western Alberta due to occasional Chinook winds.</p>
+        </aside>
         <footer>
-            <p>©2025 =] Volodymyr Druchok [= Alberta, Canada</p>
+            <p>©2025 | Volodymyr Druchok | Alberta, Canada</p>
         </footer>
     </body>
 </html>
