--- a/wwr/about.html
+++ b/wwr/about.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta author="Volodymyr Druchok">
+    <meta description="Rafting Site About Page">
     <title>Rafting Website About Page</title>
     <link rel="stylesheet" href="styles/rafting.css">
 
