Update About Us Page

--- a/wwr/about.html
+++ b/wwr/about.html
@@ -14,7 +14,7 @@
 </head>
 <body>
     <header>
-        <img src="images/logo.png" alt="Site Logo" width="200">
+        <img class="logo" src="images/logo.png" alt="Site Logo" width="200">
         <nav>
             <a href="index.html">Index</a>
             <a href="about.html">About</a>
@@ -31,11 +31,11 @@
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia maxime cumque nisi, praesentium, officiis sit voluptate, nesciunt vel odit reprehenderit inventore omnis? Et, reprehenderit totam. Beatae quasi odit qui harum. </p>
             </article>
         </div>
-        <section>
+        <section class="history">
             <h2>History</h2>
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Hic officiis placeat facere doloribus aspernatur dignissimos ullam sed delectus vel cupiditate incidunt molestiae sint exercitationem nemo sapiente omnis, laboriosam minima? Tempore?</p>
         </section>
-        <section>
+        <section class="adventure">
             <h2>Adventure Awaits You!</h2>
             <img src="images/1.jpg" alt="Example 1">
             <img src="images/2.jpg" alt="Example 2">
