--- a/wwr/about.html
+++ b/wwr/about.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Volodymyr Druchok">
-    <meta name="description" content="Rafting Website About Page">
+    <meta name="description" content="Whitewater Rafting Website About Page">
     <title>Rafting Website About Page</title>
     <link rel="stylesheet" href="styles/rafting.css">
 
