--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -33,10 +33,16 @@
     <div class="map">
         <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d1108280.1924617153!2d144.82507038586766!3d-39.89169596506845!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1suk!2sca!4v1738897542521!5m2!1suk!2sca" width="1800" height="450" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     </div>
+    <div class="imp">
+    <h2 class="employees">Our Most Loyal Employees</h2>
     <div class="emp-profiles">
-        <img src="" alt="Employee 1">
-        <img src="" alt="Employee 2">
-        <img src="" alt="Employee 3">
+        <p>Jhon Doe - Manager</p>
+        <img src="images/happy_employee_1.jpg" alt="Employee 1">
+        <p>Jane Doe - Director</p>
+        <img src="images/happy_employee_2.jpg" alt="Employee 2">
+        <p>Davy - Head of "How you doin"</p>
+        <img src="images/happy_employee_3.jpg" alt="Employee 3">
+    </div>
     </div>
     <form>
         <fieldset>
