--- a/wwr/about.html
+++ b/wwr/about.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Volodymyr Druchok">
-    <meta name="description" content="Whitewater Rafting Website About Page">
-    <title>Rafting Website About Page</title>
+    <meta name="description" content="Whitewater Rafting About Us Page">
+    <title>Whitewater Rafting About Us Page</title>
     <link rel="stylesheet" href="styles/rafting.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
