Fixing mah grades

--- a/wwr/about.html
+++ b/wwr/about.html
@@ -34,14 +34,31 @@
         <section class="history">
             <h2>History</h2>
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Hic officiis placeat facere doloribus aspernatur dignissimos ullam sed delectus vel cupiditate incidunt molestiae sint exercitationem nemo sapiente omnis, laboriosam minima? Tempore?</p>
+            <img src="images/1.jpg" alt="Example 1">
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Hic officiis placeat facere doloribus aspernatur dignissimos ullam sed delectus vel cupiditate incidunt molestiae sint exercitationem nemo sapiente omnis, laboriosam minima? Tempore?</p>
         </section>
         <section class="adventure">
             <h2>Adventure Awaits You!</h2>
+            <figure class="imageman">
             <img src="images/1.jpg" alt="Example 1">
+            <figcaption>Los Dientes del Diablo</figcaption>
+            </figure>
+            <figure class="imageman">
             <img src="images/2.jpg" alt="Example 2">
+            <figcaption>Big Mallard</figcaption>
+            </figure>
+            <figure class="imageman">
             <img src="images/3.jpg" alt="Example 3">
+            <figcaption>Half Day Adventure</figcaption>
+            </figure>    
+            <figure class="imageman">
             <img src="images/4.jpg" alt="Example 4">
+            <figcaption>Natures Bigest Adventure</figcaption>
+            </figure> 
+            <figure class="imageman">   
             <img src="images/5.jpg" alt="Example 5">
+            <figcaption>The Unknown Rapid Far Away</figcaption>
+            </figure>
         </section>
     </main>
     <footer>
