--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -27,6 +27,7 @@
     <div class="contact-info">
     <h2>Send Us A Message</h2>
     <p>White Water Rafting</p>
+    <p>Adress: 4269 - midlle of ocean street SE</p>
     <p>Phone: 999-898-8888</p>
     <p>Email: white-water-rafting@yahoo.com</p>
     </div>
@@ -95,6 +96,7 @@
             <a href="https://instagram.com">
               <img src="images/instagram.png" alt="Instagram" width="50">
             </a>
+            <a href="https://app.moqups.com/h0qK1CTCfmWfq9QhxQt2wXr0Obscn8a8/view/page/ad64222d5">Wireframe</a>
           </nav>      
     </footer>
 </body>
