--- a/wwr/about.html
+++ b/wwr/about.html
@@ -25,7 +25,7 @@
     <main>
         <div class="hero">
             <img src="images/background.jpg" alt="Background">
-            <h1>Whitewater Rafting</h1>
+            <h1 class="about">Whitewater Rafting</h1>
             <article>
                 <img src="images/happy_custumers.jpg" alt="Happy Custumers">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia maxime cumque nisi, praesentium, officiis sit voluptate, nesciunt vel odit reprehenderit inventore omnis? Et, reprehenderit totam. Beatae quasi odit qui harum. </p>
