First atemt at making trips and home

--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -45,16 +45,16 @@
         <img src="images/happy_employee_3.jpg" alt="Employee 3">
     </div>
     </div>
-    <form>
+    <form class="contact-form">
         <fieldset>
             <legend>Contact Information</legend>
             <div class="form-item column2">
                 <label for="fname">Full Name</label>
-                <input type="text" id="fname" name="fname">
+                <input type="text" id="fname" name="fname" placeholder="Example: Jane Doe">
             </div>
             <div class="form-item column2">
                 <label for="email">Email Adress</label>
-                <input type="text" id="email" name="email">
+                <input type="text" id="email" name="email" placeholder="Example: anemailyoumadewhenyouwere12@yahoo.com">
             </div>
         </fieldset>
 
