Fixing final project grade

--- a/wwr/trips.html
+++ b/wwr/trips.html
@@ -41,16 +41,40 @@
             <img src="images/trip_3.jpg" alt="Trip 3">
             <p>The "rainy" trip is a gripping adventure through the rivers and rapids of the midwestern temperate rainforests that is sure to leave you wanting more. This trip includes curated experiences at 4 gorgeous rivers in the midwestern temperate rainforests with views and fauna that are sure to take your breath away.</p>
         </div>
-        <div class="trip-list">
-            <h2>Avelible Trips</h2>
-            <p>The "mountain high" trip - 1-5 people, 500 USD per person.</p>
-            <p>The "grand" trip - 1-10 people, 700 USD per person.</p>
-            <p>The "gorgeous gorges" trip - 1-3 people, 400 USD per person.</p>
-            <p>The "western delight" trip - 1-7 people, 800 USD per person.</p>
-            <p>The "cheap" trip - 1-20 people, 200 USD per person.</p>
-            <p>The "rainy" trip - 1-5 people, 600 USD per person.</p>
-            <p>The "premium" trip - 1 person only, 2000 USD.</p>
-        </div>
+        <table>
+            <caption>
+              Trip Details
+            </caption>
+            <thead>
+              <tr>
+                <th scope="col">Name</th>
+                <th scope="col">People</th>
+                <th scope="col">Price per person</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <th scope="row">Mountain high</th>
+                <td>1-5 people</td>
+                <td>500 USD</td>
+              </tr>
+              <tr>
+                <th scope="row">Grand</th>
+                <td>1-10 people</td>
+                <td>700 USD</td>
+              </tr>
+              <tr>
+                <th scope="row">Gorgeous gorges</th>
+                <td>1-3 people</td>
+                <td>400 USD</td>
+              </tr>
+              <tr>
+                <th scope="row">Western delight</th>
+                <td>1-7 people</td>
+                <td>800 USD</td>
+              </tr>
+            </tbody>    
+          </table>
         </div>
         
     </main>
